WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71762
Fix gcc 4.4 compilation warnings in DFG 32_64
https://bugs.webkit.org/show_bug.cgi?id=71762
Summary
Fix gcc 4.4 compilation warnings in DFG 32_64
Yuqiang Xian
Reported
2011-11-07 21:29:49 PST
gcc 4.4 on Linux will complain "comparison always false due to limited range of data type" for a function (registersMatched) in DFG, as in one file the call to this function always has the second parameter as "InvalidGPRReg". Patch forthcoming.
Attachments
the patch
(2.14 KB, patch)
2011-11-07 21:33 PST
,
Yuqiang Xian
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yuqiang Xian
Comment 1
2011-11-07 21:33:28 PST
Created
attachment 113984
[details]
the patch
WebKit Review Bot
Comment 2
2011-11-07 22:52:00 PST
Comment on
attachment 113984
[details]
the patch Clearing flags on attachment: 113984 Committed
r99525
: <
http://trac.webkit.org/changeset/99525
>
WebKit Review Bot
Comment 3
2011-11-07 22:52:04 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug