Fix gcc 4.4 compilation warnings in DFG 32_64 https://bugs.webkit.org/show_bug.cgi?id=71762

Reviewed by Filip Pizlo.

* dfg/DFGJITCodeGenerator.h:
(JSC::DFG::JITCodeGenerator::registersMatched):


Canonical link: https://commits.webkit.org/88098@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99525 268f45cc-cd09-0410-ab3c-d52691b4dbfc